# knowledge_rag

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
scripts/: pull_ollama_models.sh  seed_neo4j_schema.py
src/: config.py  main.py
src/api/: dependencies.py
src/api/routers/: graph.py  health.py  ingest.py  query.py
src/core/: exceptions.py  models.py  schemas.py
src/infrastructure/azure_devops/: client.py  mappers.py  pull_requests.py  work_items.py
src/infrastructure/neo4j/: driver.py  graph_traversal.py  queries.py  repository.py  schema.py  vector_search.py
src/infrastructure/ollama/: client.py
src/services/: embedding_service.py  ingest_service.py  llm_service.py  query_service.py
src/utils/: logging.py  text.py
